fixed and updated the live online status
